# Iconsult_mcp

./: .gitignore  CLAUDE.md  README.md  knowledge-graph.html  pyproject.toml
docs/: architecture.html  development.md  index.html  openai-financial-agent-review.html
scripts/: build_graph.py  discover_relationships.py  insert_phase2.py  insert_phase3.py  parse_book.py  parse_index.py  populate_content.py  run_pipeline.py  tag_concepts.py  visualize_graph.py
src/iconsult_mcp/: __init__.py  config.py  db.py  embed.py  escalation.py  server.py
src/iconsult_mcp/tools/: ask_book.py  consultation_report.py  critique_consultation.py  get_subgraph.py  health.py  list_concepts.py  log_pattern_assessment.py  match_concepts.py  score_architecture.py  validate_subagent.py
tests/: cases.py  conftest.py  test_consultation_flow.py  test_match_concepts.py  test_score_architecture.py  test_subgraph.py
