[project]
name = "iconsult-mcp"
version = "0.1.0"
description = "MCP server for multi-agent architecture consultation, backed by a knowledge graph from 'Agentic Architectural Patterns for Building Multi-Agent Systems'"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "duckdb>=1.0.0",
]

[project.scripts]
iconsult-mcp = "iconsult_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iconsult_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
